@@ -1,53 +1,0 @@
-#loginform
-{
-  width: 18em;
-  margin: auto;
-  background: #4E789E;
-  position: relative;
-}
-
-#loginform-title
-{
-  margin: 10px;
-  font: lighter 200% "Bitstream Vera Sans",sans-serif;
-  background: #CDE8FB;
-}
-
-#loginform-content
-{
-  margin: 20px;
-  background: #CDE8FB;
-  position: relative;
-}
-
-#loginform-username-text,#loginform-password-text
-{
-  text-align: left;
-}
-
-#loginform-username-input,#loginform-password-input
-{
-  text-align: right;
-}
-
-#loginform-submit
-{
-  margin-top: 5px;
-  margin-left: 8em;
-  cursor: pointer;
-  width: 4em;
-  background-color: #FFF;
-  position: relative;
-}
-
-#loginform-submit a
-{
-  display: block;
-  padding: 5px 0;
-  text-transform: uppercase;
-  background: #fff;
-  color: #000;
-  text-decoration: none;
-  text-align: center;
-  position: relative;
-}
