@@ -1,12 +1,0 @@
-<script type="text/javascript" src="atk/ext/NiftyCube/niftycube.js"></script>
-<script type="text/javascript">
-{literal}
-window.onload=function(){
-Nifty("div.box-dispatch","big");
-}
-{/literal}
-</script>
-<div class="box-dispatch">
-<div class="box-dispatch-title">{$title}</div>
-<div class="box-dispatch-content">{$content}</div>
-</div>
